# geoffrey

./: Cargo.toml  LICENSE  README.md  makefile
app/: Cargo.toml
app/src/: dbutil.rs  main.rs  main.rs.old
app/src/commands/: admin.rs  mod.rs  questions.rs  users.rs
app/src/events/: backfill.rs  message.rs  mod.rs  thread_create.rs
entity/src/entities/: courses.rs  forum_channels.rs  mod.rs  posts.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230818_200744_init.rs
