[package]
name = "geoffrey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }

tokio = { version = "1.32", features = ["full"] }
log = "0.4"
env_logger = "0.10"
sea-orm = { version = "0.12", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"macros",
	"with-chrono",
	"with-uuid",
] }
anyhow = "1.0"
chrono = "0.4"

migration = { path = "../migration" }
entity = { path = "../entity" }


[dependencies.serenity]
default-features = false
features = [
	"builder",
	"client",
	"gateway",
	"model",
	"utils",
	"collector",
	"unstable_discord_api",
]
version = "0.11.6"
